[gd_scene load_steps=7 format=3 uid="uid://dr0bm8cjmt6o"]

[ext_resource type="Script" path="res://scripts/charecters/lil_booger.gd" id="1_wvf3k"]
[ext_resource type="Texture2D" uid="uid://ctyqx64kduj1b" path="res://assets/textures/2nd_kidddddd.png" id="2_wk86l"]
[ext_resource type="AudioStream" uid="uid://474ihg64jr7c" path="res://assets/sounds/new_meme_sounds/cartoon-jump.mp3" id="3_0qlbw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pchd"]
size = Vector2(22.4518, 29.258)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixqhs"]
size = Vector2(102, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfxy8"]
size = Vector2(62, 61)

[node name="lil_kid" type="CharacterBody2D"]
script = ExtResource("1_wvf3k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -3)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_wk86l")

[node name="wall_check" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collide_with_areas = true

[node name="wall_check2" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.499998, 0.499998)
rotation = 3.14159
scale = Vector2(1.29165, 0.922824)
shape = SubResource("RectangleShape2D_1pchd")

[node name="kid_dead" type="Area2D" parent="."]
position = Vector2(0, -15)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="kid_dead"]
position = Vector2(0, -29.5)
shape = SubResource("RectangleShape2D_ixqhs")

[node name="player_dead" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_dead"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_bfxy8")

[node name="death_sound" type="AudioStreamPlayer" parent="."]

[node name="timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0qlbw")

[connection signal="body_entered" from="kid_dead" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="player_dead" to="." method="_on_player_dead_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]
